[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-oscar-cybersource"
version = "9.3.0"
description = "Integration between django-oscar and the Cybersource Secure Acceptance."
readme = "README.rst"
license = { text = "ISC" }
dependencies = [
    "Django (>=4.2)",
    "django-oscar (>=4.0,<4.1)",
    "django-oscar-api (==3.3.0)",
    "django-oscar-api-checkout (>=3.7.0,<4)",
    "thelabdb (>=0.5.0)",
    "lxml (>=6,<7)",
    "phonenumbers (>=9.0.3,<10)",
    "python-dateutil (>=2.9.0,<3)",
    "django-stubs-ext (>=5.1.3,<6)",
    "zeep (>=4.3.1,<5)",
    "xmlsec (>=1.3.15,<2)",
    "pydantic (>=2.11.3,<3)",
    "cryptography (>=45.0.0,<46)",
]
requires-python = ">=3.13"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-cybersource"
Repository = "https://gitlab.com/thelabnyc/django-oscar/django-oscar-cybersource"

[dependency-groups]
dev = [
    "coverage (==7.9.2)",
    "flake8 (==7.3.0)",
    "psycopg2-binary (==2.9.10)",
    "PyYAML (==6.0.2)",
    "sorl-thumbnail (==12.11.0)",
    "sphinx-rtd-theme (==3.0.2)",
    "sphinx (==8.2.3)",
    "tox (==4.27.0)",
    "unittest-xml-reporting (==3.2.0)",
    "django-stubs (==5.2.1)",
    "mypy (==1.15.0)",
    "types-psycopg2 (>=2.9.21.20241019,<3)",
    "djangorestframework-stubs (==3.16.0)",
    "lxml-stubs (==0.5.1)",
    "types-python-dateutil (>=2.9.0.20241206,<3)",
    "types-pygments (>=2.19.0.20250107,<3)",
    "requests-mock (==1.12.1)",
    "tox-uv>=1.26.1",
]

[tool.hatch.build.targets.wheel]
packages = ["cybersource"]

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true", "uv build"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "oscar.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "oscarapi.*"
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
ignore_errors = true


[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.coverage.run]
branch = true
source_pkgs = ["cybersource"]

[tool.coverage.report]
show_missing = true
ignore_errors = true
